--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,6 +56,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="5dp"
+            android:onClick="onClickCadastrar"
             android:text="@string/txt_cadastrar" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
