--- a/app/src/main/res/layout/activity_validador.xml
+++ b/app/src/main/res/layout/activity_validador.xml
@@ -46,7 +46,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/edtCodigo"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -61,6 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
+            android:onClick="onClickValidar"
             android:text="@string/txt_Validar" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
