Monstrando mensagens brancas quando envia e verde quando recebe.

--- a/app/src/main/res/layout/activity_conversa.xml
+++ b/app/src/main/res/layout/activity_conversa.xml
@@ -17,7 +17,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="visible"
-        tools:visibility="gone">
+        tools:visibility="gone"
+        android:layout_below="@+id/toolbarConversas"
+        android:layout_above="@+id/layout_input">
 
     </ListView>
 
