--- a/app/src/main/res/layout/fragment_contatos.xml
+++ b/app/src/main/res/layout/fragment_contatos.xml
@@ -2,11 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".fragmentos.ContatosFragment">
 
     <ListView
         android:id="@+id/listaContatos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:dividerHeight="0dp"
+        android:layout_gravity="center_horizontal|top" />
 </FrameLayout>
