--- a/app/src/main/res/layout/lista_contatos.xml
+++ b/app/src/main/res/layout/lista_contatos.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imgPerfil"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/ic_account_circle" />
+        app:srcCompat="@drawable/ic_account_circle" />
 
     <LinearLayout
         android:layout_width="match_parent"
