--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,6 +11,12 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/item_config"
+        android:orderInCategory="100"
+        android:title="Configuraçoes"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/item_adcionar"
         android:icon="@drawable/ic_person_add"
         android:orderInCategory="300"
