--- a/app/src/main/res/layout/item_mensagem_esquerda.xml
+++ b/app/src/main/res/layout/item_mensagem_esquerda.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/txt_mensagem"
@@ -12,4 +13,13 @@
         android:padding="8dp"
         android:background="@color/colorWhite" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/txt_horario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:text="01/01/2000 15:40"
+        android:textSize="12sp"
+        android:padding="2dp" />
+
+</LinearLayout>
