--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,15 +26,14 @@
             android:textSize="12sp" />
 
         <ImageView
-            android:id="@+id/imgPerfil"
+            android:id="@+id/imgContatoPerfil"
             android:layout_width="200dp"
             android:layout_height="180dp"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
-            android:background="@color/colorWhite"
+            android:background="@drawable/ic_account_circle"
             android:contentDescription="@string/img_perfil"
-            android:foregroundGravity="center"
-            app:srcCompat="@drawable/ic_launcher_foreground" />
+            android:foregroundGravity="center" />
 
         <TextView
             android:id="@+id/txtDados"
