--- a/app/src/main/res/layout/lista_contatos.xml
+++ b/app/src/main/res/layout/lista_contatos.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/imgPerfil"
+        android:id="@+id/imgContatoPerfil"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="5dp"
