--- a/app/src/main/res/layout/item_mensagem_esquerda.xml
+++ b/app/src/main/res/layout/item_mensagem_esquerda.xml
@@ -8,7 +8,7 @@
         android:id="@+id/txt_mensagem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mensagem..."
+        android:text="@string/txt_escrevaMensagem"
         android:textColor="@color/colorBlack"
         android:padding="8dp"
         android:background="@color/colorWhite" />
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:text="01/01/2000 15:40"
+        android:text="@string/txt_NumeroPadrao"
         android:textSize="12sp"
         android:padding="2dp" />
 
